--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,7 +2,7 @@
 
           <div class="container col-xxl-9 text-white text-center py-5">
                <p style="font-size: clamp(70px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
-               <p style="max-width: 500px; margin: auto;" class="fw-lighter text-center">Curious about permaculture? Dive into our interactive web app and learn how to transform your backyard into a thriving, sustainable ecosystem!</p>
+               <p style="max-width: 500px; margin: auto; font-size: clamp(20px,2vw,30px) ;" class="fw-lighter text-center">JELLYACE GROUP</p>
                <button class="discover-btn btn mt-3">Discover</button>
           </div>
      </section>
@@ -15,8 +15,8 @@
                </div>
                <div class="features-card col">
                     <div class="">
-                         <p class="fw-bold">About JellyAce</p>
-                         <p class="lg-text">Project SEED is an interactive web app designed to help users learn and apply permaculture principles in their backyards, promoting sustainable gardening and fostering eco-friendly communities through personalized guidance, resources, and practical tools. </p>
+                         <p class="fw-bold">Project SEED: Sustainable Ecological  Empowerment through Development -  Implementing Permaculture Principles  in  Brgy.  Guinacutan,  Camarines Norte</p>
+                         <p class="lg-text">Project SEED is an interactive web app designed to help users learn and apply permaculture principles in their backyards, promoting sustainable gardening and fostering eco-friendly communities through personalized guidance, resources, and practical tools.</p>
                     </div>
                     <div class="d-flex justify-content-between features-img row mt-5">
                          <div class="cards col">
@@ -80,7 +80,7 @@
                     <span>Customers Say</span> 
                </p>
                <div class="green-line"></div>
-               <p class="lg-text mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+               <p class="lg-text mt-3">Discover how permaculture has transformed their lives and communities through their inspiring stories and experiences with this web app.</p>
 
                <div class="container my-5">
                     <div id="ratingsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -89,39 +89,39 @@
                     <div class="carousel-item active">
                          <div class="d-flex flex-column align-items-center custom-shadow">
                               <div class="rating mt-4">★★★★☆</div>
-                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <p class="mt-3 p-2">Thanks to the app, I learned how to identify plant diseases and manage pests naturally. Now, I grow a variety of crops in my urban backyard, providing food for my family and neighbors. Permaculture has truly changed my life. I feel empowered and inspired to live more sustainably."</p>
                               <div style="width: 100px; height: 100px;">
                                    <img style="width: 100%; border-radius: 50px;" src="/images/ceo.png" alt="User Image">
                               </div>
                               <div class="mt-3">
                                    <p class="m-0 fw-bold">Nicole Pajares</p>
-                                   <p class="lg-text">CEO</p>
+                                   <p class="lg-text">Impressed CEO</p>
                               </div>
                          </div>
                     </div>
                     <div class="carousel-item">
                          <div class="d-flex flex-column align-items-center custom-shadow">
                               <div class="rating mt-4">★★★★☆</div>
-                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <p class="mt-3 p-2">I was able to recognize plant problems and learn how to naturally control pests because of the app. I now cultivate a range of vegetables in my garden in the city to feed my family and the people around me. Really, permaculture has transformed my life. I'm motivated and emboldened to lead a more sustainable life."</p>
                               <div style="width: 100px; height: 100px;">
-                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                                   <img style="width: 100%; border-radius: 50px;" src="/images/mac.png" alt="User Image">
                               </div>
                               <div class="mt-3">
-                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
-                                   <p class="lg-text">CEO</p>
+                                   <p class="m-0 fw-bold">Macrin Abanda</p>
+                                   <p class="lg-text">Impressed CRDO</p>
                               </div>
                          </div>
                     </div>
                     <div class="carousel-item">
                          <div class="d-flex flex-column align-items-center custom-shadow">
                               <div class="rating mt-4">★★★★☆</div>
-                              <p class="mt-3 p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+                              <p class="mt-3 p-2">The software taught me how to spot plant illnesses and treat pests naturally. Now, I raise a variety of vegetables in my urban garden, feeding my family and neighbors. Permaculture has truly transformed my life. I feel empowered and motivated to live more sustainably.</p>
                               <div style="width: 100px; height: 100px;">
-                                   <img style="width: 100%; border-radius: 50px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyAu6acC2ZQ_TmFRon-lg0KqtdrxDpqUBCVA&s" alt="User Image">
+                                   <img style="width: 100%; border-radius: 50px;" src="/images/ronel.png" alt="User Image">
                               </div>
                               <div class="mt-3">
-                                   <p class="m-0 fw-bold">Monkey D. Luffy</p>
-                                   <p class="lg-text">CEO</p>
+                                   <p class="m-0 fw-bold">Ronel G. Vega</p>
+                                   <p class="lg-text">Impressed CDDO</p>
                               </div>
                           
                          </div>
