--- a/views/partials/AdminHeader.ejs
+++ b/views/partials/AdminHeader.ejs
@@ -3,7 +3,6 @@
      <head>
           <meta charset="UTF-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <link rel="icon" href="/images/excessify.png" type="image/x-icon" />
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
           <!-- DataTables CSS -->
@@ -15,14 +14,14 @@
 
           <link rel="stylesheet" href="/styles/style.css" />
 
-          <title>Jelly Ace</title>
+          <title>Admin</title>
      </head>
      <body>
           <section id="navigation-bar">
                <div class="container">
                     <nav class="navbar bg-white navbar-expand-lg">
                          <div class="container-fluid">
-                              <a class="navbar-brand" href="#">FW</a>
+                              <a class="navbar-brand" href="#">Admin</a>
                               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                    <span class="navbar-toggler-icon"></span>
                               </button>
@@ -44,9 +43,8 @@
                </div>
           </section>
 
-
-            <!-- LOADING ANIMATION -->
-            <style>
+          <!-- LOADING ANIMATION -->
+          <style>
                .spinner-container {
                     position: fixed;
                     top: 0;
@@ -77,3 +75,5 @@
           </script>
 
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+     </body>
+</html>
