--- a/views/partials/LandingPageHeader.ejs
+++ b/views/partials/LandingPageHeader.ejs
@@ -7,7 +7,7 @@
      <meta property="og:image" content="/images/logo-nav.svg" />
      <meta property="og:url" content="https://permaculture-production.up.railway.app/" />
 
-     <link rel="icon" href="/images/logo copy.svg" type="image/x-icon" />
+     <link rel="icon" type="image/x-icon" href="/images/logo-user.svg">
 
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
