--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,7 +3,8 @@
           <div class="container col-xxl-9 text-white text-center py-5">
                <p style="font-size: clamp(70px,10vw,150px) ; line-height: 1;" class="fw-bold p-0 mt-5">PROJECT SEED</p>
                <p style="max-width: 500px; margin: auto; font-size: clamp(20px,2vw,30px) ;" class="fw-lighter text-center">JELLYACE GROUP</p>
-               <button class="discover-btn btn mt-3">Discover</button>
+               <a href="#features"> <button class="discover-btn btn mt-3">Discover</button></a>
+              
           </div>
      </section>
 
@@ -59,11 +60,20 @@
           <div class="container col-xxl-9">
                <div class="row">
                     <div class="col-lg-6 col-md-12">
-                         <p class="h3 fw-bolder">The Most Producing Crops</p>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua.</p>
-                         <p class="lg-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                         <p class="lg-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                         <p class="h3 fw-bolder">Project Seed</p>
+
+
+
+                         <p class="lg-text">
+                              Enhancing Local Food Security
+                              <br>
+                              <br>
+                              By utilizing land, resources, people and the environment in a awy that doesn't produce any waste. It encompasses the whole living environment, which is design to produce as much as possible food.
+                              <br>
+                              Maximize the use of technological tools to make people adapt the principles of permaculture in a fast and convenient way.
+                         </p>
+                         <a href="/login"> <button class="discover-btn btn mt-3">Find out more</button></a>
+                       </div>
                     <div class="col-lg-6">
                          <img src="/images/vegetable.png" width="100%" alt="">
                     </div>
